# nexshieldveil

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.toml  etude-confidentialite-ecran.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN_TOKENS.md  LIMITATIONS.md  PRIVACY.md  ROADMAP.md  ROADMAP_FLOU_PIXELISATION.md  UI_PLAN.md
docs/audit/: AUDIT.md  REMEDIATION.md
docs/audit/raw/: bandit.txt  mypy-all.txt  mypy-core.txt  pip-audit.txt  pytest-cov.txt  pytest-performance.txt  pytest-privacy.txt  ruff-format.txt
fixtures/: README.md
packaging/: app_entry.py  build.ps1  installer.iss  nexshieldveil.spec
scripts/: demo_overlay.py  diagnose_gaze.py  run_live.py
src/privacy_guard/: __init__.py  app.py  resources.py
src/privacy_guard/capture/: __init__.py  frame_source.py  opencv_sources.py
src/privacy_guard/config/: __init__.py  loader.py  models.py
src/privacy_guard/geometry/: __init__.py  gaze.py  types.py
src/privacy_guard/masking/: __init__.py  strategies.py
src/privacy_guard/overlay/: __init__.py  compositor.py  grabber.py  qt_executor.py  qt_grabber.py  qt_overlay.py  renderer.py
src/privacy_guard/policy/: __init__.py  state_machine.py
src/privacy_guard/tracking/: __init__.py  filters.py
src/privacy_guard/ui/: __init__.py  __main__.py  control_window.py  controller.py  core_controller.py  fake_controller.py  fonts.py  i18n_catalog.py  preview.py  qml_app.py  shell.py  state.py  status.py  translator.py  updater_ui.py
src/privacy_guard/ui/assets/fonts/: README.md
src/privacy_guard/ui/i18n/: en.json  fr.json
src/privacy_guard/ui/theme/: __init__.py  theme_controller.py  tokens.py
src/privacy_guard/ui/viewmodels/: __init__.py  about.py  camera.py  onboarding.py  settings.py  status.py  tray.py
src/privacy_guard/ui/views/: AboutView.qml  CameraBadge.qml  CameraView.qml  GlassPanel.qml  MainView.qml  OnboardingView.qml  PrimaryButton.qml  SettingsView.qml  StatusPill.qml  StatusView.qml  Veil.qml
src/privacy_guard/update/: __init__.py  checker.py  version.py
src/privacy_guard/vision/: __init__.py  detector.py  mediapipe_detector.py  observation.py
tests/: conftest.py
tests/component/: test_capture.py  test_overlay.py  test_vision.py
tests/integration/: test_pipeline.py
tests/performance/: test_masking_perf.py  test_performance.py
tests/privacy/: test_privacy.py  test_screen_capture_privacy.py  test_source_hygiene.py
tests/system/: test_e2e.py
tests/ui/: conftest.py  test_camera.py  test_controller.py  test_core_controller.py  test_design_tokens.py  test_fonts.py  test_i18n.py  test_qt_executor.py  test_qt_grabber.py  test_qt_presenter.py  test_state.py  test_theme_controller.py  test_translator.py  test_viewmodels.py  test_views.py
tests/unit/: test_compositor.py  test_config.py  test_geometry.py  test_grabber.py  test_head_pose.py  test_masking.py  test_policy.py  test_resources.py  test_tracking.py  test_ui_status.py  test_update_version.py
